import React from 'react';
import { render, fireEvent } from 'react-testing-library';
import renderer from 'react-test-renderer';

import Display from './Display';

describe('the Display component', () => {
  it('should match the snapshot', () => {
    const tree = renderer.create(<Display />);
    expect(tree.toJSON()).toMatchSnapshot();
  });

  it('should match the snapshot when closed', () => {
    const tree = renderer.create(<Display closed={true} />);
    expect(tree.toJSON()).toMatchSnapshot();
  });

  it('should match the snapshot when not closed', () => {
    const tree = renderer.create(<Display close={false} />);
    expect(tree.toJSON()).toMatchSnapshot();
  });

  it('should match the snapshot when locked', () => {
    const tree = renderer.create(<Display locked={true} />);
    expect(tree.toJSON()).toMatchSnapshot();
  });

  it('should match the snapshot when not locked', () => {
    const tree = renderer.create(<Display locked={false} />);
    expect(tree.toJSON()).toMatchSnapshot();
  });

  it('should match the snapshot when locked and closed', () => {
    const tree = renderer.create(<Display locked={true} closed={true} />);
    expect(tree.toJSON()).toMatchSnapshot();
  });

  it('should match the snapshot when not locked and closed', () => {
    const tree = renderer.create(<Display locked={false} closed={true} />);
    expect(tree.toJSON()).toMatchSnapshot();
  });

  it('should match the snapshot when not locked and not closed', () => {
    const tree = renderer.create(<Display locked={false} closed={false} />);
    expect(tree.toJSON()).toMatchSnapshot();
  });

  it('should match the snapshot when locked and not closed', () => {
    const tree = renderer.create(<Display locked={true} closed={false} />);
    expect(tree.toJSON()).toMatchSnapshot();
  });
});
